--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@
 .cache/
 .history/
 .lib/
+.idea/
 dist/*
 target/
 lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+lib/spark-assembly-1.1.0-hadoop2.4.0.jar
 
 # Scala-IDE specific
 .scala_dependencies
